<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="CNBoard"
                android:textColor="#757575"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dday_title"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColor="#084B8A"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="15dp"
            android:hint="@string/title"
            android:id="@+id/edittext_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dday_date"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textColor="#084B8A"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/design_edittext"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:id="@+id/linear_date">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_dday" />
            <TextView
                android:gravity="center"
                android:textSize="15dp"
                android:id="@+id/textview_mday"
                android:layout_marginLeft="27dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notificate_set"
                    android:textColor="#FF0000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regisn_detail"
                    android:textSize="11dp"
                    android:layout_marginTop="3dp"/>
            </LinearLayout>

            <Switch
                android:id="@+id/switch_alert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:track="@drawable/switch_trac_selector"
                android:thumb="@drawable/switch_thumb"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/design_button"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="13dp"
                android:text="@string/cancel"
                android:id="@+id/button_cancel"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/design_button"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="5dp"
                android:text="@string/ok"
                android:id="@+id/button_ok"/>
        </LinearLayout>

</LinearLayout>